MDEV-26427 Draft

1. Fix server crash (but inserted result is still incorrect).
2. Implement correct execution of queries like "insert into t select sum(1)"