sql/sql_select.cc
@@ -1877,7 +1877,8 @@ JOIN::optimize_inner()
     /* Merge all mergeable derived tables/views in this SELECT. */
     if (select_lex->handle_derived(thd->lex, DT_MERGE))
       DBUG_RETURN(TRUE);  
-    table_count= select_lex->leaf_tables.elements;
+    // OLEGS: duplicated
+    //table_count= select_lex->leaf_tables.elements;
   }
 
   if (select_lex->first_cond_optimization &&
@@ -1920,7 +1921,8 @@ JOIN::optimize_inner()
   
   eval_select_list_used_tables();
 
-  table_count= select_lex->leaf_tables.elements;
+  // OLEGS: duplicated
+  //table_count= select_lex->leaf_tables.elements;
 
   if (select_lex->options & OPTION_SCHEMA_TABLE &&
       optimize_schema_tables_memory_usage(select_lex->leaf_tables))
@@ -6895,8 +6897,8 @@ update_ref_and_keys(THD *thd, DYNAMIC_ARRAY *keyuse,JOIN_TAB *join_tab,
 
       /* Mark that we can optimize LEFT JOIN */
       if (field->val->type() == Item::NULL_ITEM &&
-	  !field->field->real_maybe_null())
-	field->field->table->reginfo.not_exists_optimize=1;
+         !field->field->real_maybe_null())
+       field->field->table->reginfo.not_exists_optimize=1;
     }
     field= saved_field;
   }
@@ -13900,7 +13902,7 @@ void JOIN::cleanup(bool full)
     /* Free the original optimized join created for the group_by_handler */
     join_tab= original_join_tab;
     original_join_tab= 0;
-    table_count= original_table_count;
+    // table_count= original_table_count;
   }
 
   if (join_tab)
