sql/sql_select.h
@@ -1261,7 +1261,7 @@ public:
 
   Pushdown_query *pushdown_query;
   JOIN_TAB *original_join_tab;
-  uint	   original_table_count;
+  // uint	   original_table_count;
 
 /******* Join optimization state members start *******/
   /*
